# numpydanticV2

./: .gitignore  README.md  bench.py  demo.ipynb  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
numpydantic/: __init__.py  ndarray.py
numpydantic/_ndarray/: __init__.py  constants.py  metadata.py  serializer.py  spec.py  validator.py
tests/: conftest.py  test_integration.py  test_serializer.py  test_validator.py
