[project]
name = "numpydantic"
version = "0.1.0"
description = "Pydantic v2 support for typed numpy arrays."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "jupyter",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["numpydantic"]

[tool.pytest.ini_options]
testpaths = ["tests"]
